--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -112,6 +112,7 @@ DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
 DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,live.com,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
@@ -232,7 +233,6 @@ DOMAIN-SUFFIX,lecloud.com,DIRECT
 DOMAIN-SUFFIX,lemicp.com,DIRECT
 DOMAIN-SUFFIX,letv.com,DIRECT
 DOMAIN-SUFFIX,letvcloud.com,DIRECT
-DOMAIN-SUFFIX,live.com,DIRECT
 DOMAIN-SUFFIX,lizhi.io,DIRECT
 DOMAIN-SUFFIX,localizecdn.com,DIRECT
 DOMAIN-SUFFIX,lucifr.com,DIRECT
@@ -311,12 +311,9 @@ DOMAIN-SUFFIX,trellocdn.com,DIRECT
 DOMAIN-SUFFIX,ttmeiju.com,DIRECT
 DOMAIN-SUFFIX,tudou.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
-DOMAIN-SUFFIX,umengcloud.com,DIRECT
 DOMAIN-SUFFIX,upaiyun.com,DIRECT
 DOMAIN-SUFFIX,upyun.com,DIRECT
 DOMAIN-SUFFIX,uxengine.net,DIRECT
-DOMAIN-SUFFIX,v2ex.co,DIRECT
-DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,weather.bjango.com,DIRECT
 DOMAIN-SUFFIX,weather.com,DIRECT
@@ -532,7 +529,6 @@ DOMAIN,player.ooyala.com,REJECT
 DOMAIN,ec.c.ooyala.com,REJECT
 DOMAIN-SUFFIX,g.doubleclick.net,REJECT
 
-DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
