--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -357,23 +357,17 @@ DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 // UA
 USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
-USER-AGENT,*Vainglory* ,DIRECT
-USER-AGENT,arrowio*,DIRECT
 USER-AGENT,balls*,DIRECT
-USER-AGENT,Best%20Trace*,DIRECT
-USER-AGENT,hide*,DIRECT
 USER-AGENT,LastPass*,DIRECT
-USER-AGENT,MegaWerewolf*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,Microsoft*,DIRECT
 USER-AGENT,QQ*,DIRECT
-USER-AGENT,TeamViewer*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 
 DOMAIN,badad.googleplex.com,REJECT
 DOMAIN,partner.googleadservices.com,REJECT
-DOMAIN,www.googleadservices.com,REJECT
+DOMAIN,googleadservices.com,REJECT
 DOMAIN,static.googleadsserving.cn,REJECT
 DOMAIN,ads.gmodules.com,REJECT
 DOMAIN,ads.google.com,REJECT
@@ -384,33 +378,33 @@ DOMAIN,googlecommerce.com,REJECT
 DOMAIN,googletagmanager.com,REJECT
 DOMAIN,googletagservices.com,REJECT
 DOMAIN,mobileads.google.com,REJECT
-DOMAIN,pagead.google.com,REJECT
-DOMAIN,pagead.l.google.com,REJECT
-DOMAIN,pagead-tpc.l.google.com,REJECT
-DOMAIN,partnerad.l.google.com,REJECT
-DOMAIN,service.urchin.com,REJECT
-DOMAIN,tpc.googlesyndication.com,REJECT
-DOMAIN,googlesyndication.com,REJECT
-DOMAIN,pagead2.googlesyndication.com,REJECT
-DOMAIN,afs.googlesyndication.com,REJECT
-DOMAIN,video-ad-stats.googlesyndication.com,REJECT
+DOMAIN-SUFFIX,pagead.google.com,REJECT
+DOMAIN-SUFFIX,pagead.l.google.com,REJECT
+DOMAIN-SUFFIX,pagead-tpc.l.google.com,REJECT
+DOMAIN-SUFFIX,partnerad.l.google.com,REJECT
+DOMAIN-SUFFIX,service.urchin.com,REJECT
+DOMAIN-SUFFIX,tpc.googlesyndication.com,REJECT
+DOMAIN-SUFFIX,googlesyndication.com,REJECT
+DOMAIN-SUFFIX,pagead2.googlesyndication.com,REJECT
+DOMAIN-SUFFIX,afs.googlesyndication.com,REJECT
+DOMAIN-SUFFIX,video-ad-stats.googlesyndication.com,REJECT
 
 # Youtube
-DOMAIN,ads.youtube.com,REJECT
-DOMAIN,azabu-u.ac.jp,REJECT
-DOMAIN,couchcoaster.jp,REJECT
-DOMAIN,delivery.dmkt-sp.jp,REJECT
-DOMAIN,files.adform.net,REJECT
-DOMAIN,m-78.jp,REJECT
-DOMAIN,nichibenren.or.jp,REJECT
-DOMAIN,nicorette.co.kr,REJECT
-DOMAIN,shizen-no-megumi.com,REJECT
-DOMAIN,s0.2mdn.net,REJECT
-DOMAIN,s1.2mdn.net,REJECT
-DOMAIN,adfarm.mediaplex.com,REJECT
-DOMAIN,secure.img-cdn.mediaplex.com,REJECT
-DOMAIN,badad.googleplex.com,REJECT
-DOMAIN,youtube.112.2o7.net,REJECT
+DOMAIN-SUFFIX,ads.youtube.com,REJECT
+DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
+DOMAIN-SUFFIX,couchcoaster.jp,REJECT
+DOMAIN-SUFFIX,delivery.dmkt-sp.jp,REJECT
+DOMAIN-SUFFIX,files.adform.net,REJECT
+DOMAIN-SUFFIX,m-78.jp,REJECT
+DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
+DOMAIN-SUFFIX,nicorette.co.kr,REJECT
+DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
+DOMAIN-SUFFIX,s0.2mdn.net,REJECT
+DOMAIN-SUFFIX,s1.2mdn.net,REJECT
+DOMAIN-SUFFIX,adfarm.mediaplex.com,REJECT
+DOMAIN-SUFFIX,secure.img-cdn.mediaplex.com,REJECT
+DOMAIN-SUFFIX,badad.googleplex.com,REJECT
+DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
 
 #analytics
 # Netease
@@ -433,20 +427,7 @@ DOMAIN-SUFFIX,data.bilibili.com,REJECT
 DOMAIN-SUFFIX,cm.bilibili.com,REJECT
 
 # 51LA
-DOMAIN-SUFFIX,ia.51.la,REJECT
-DOMAIN-SUFFIX,js.users.51.la,REJECT
-DOMAIN-SUFFIX,img.users.51.la,REJECT
-DOMAIN-SUFFIX,new.users.51.la,REJECT
-DOMAIN-SUFFIX,zzimg.51.la,REJECT
 DOMAIN-SUFFIX,tc.51la.net,REJECT
-DOMAIN-SUFFIX,icon.51.la,REJECT
-DOMAIN-SUFFIX,icon.users.51.la,REJECT
-DOMAIN-SUFFIX,js3.users.51.la,REJECT
-DOMAIN-SUFFIX,quote.51.la,REJECT
-DOMAIN-SUFFIX,vip.51.la,REJECT
-DOMAIN-SUFFIX,web.51.la,REJECT
-DOMAIN-SUFFIX,web1.51.la,REJECT
-DOMAIN-SUFFIX,web2.51.la,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 
 # CSDN
@@ -480,7 +461,6 @@ DOMAIN-SUFFIX,report.qcloud.com,REJECT
 
 # Google Analytics
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
-DOMAIN-SUFFIX,stats.g.doubleclick.net,REJECT
 
 # Baidu
 DOMAIN-SUFFIX,hpd.baidu.com,REJECT
@@ -489,7 +469,6 @@ DOMAIN-SUFFIX,hm.baidu.com,REJECT
 # effectivemeasure
 DOMAIN-SUFFIX,effectivemeasure.net,REJECT
 
-# Others
 DOMAIN-SUFFIX,s.qhupdate.com,REJECT
 DOMAIN-SUFFIX,hs.qhupdate.com,REJECT
 DOMAIN-SUFFIX,js.users.51.la,REJECT
@@ -510,24 +489,24 @@ DOMAIN-SUFFIX,do-not-tracker.org,REJECT
 DOMAIN-SUFFIX,tongji.tom.com,REJECT
 DOMAIN-SUFFIX,track.china.com,REJECT
 
-DOMAIN,mob.5hito.com,REJECT
-DOMAIN,zkres.myzaker.com,REJECT
-DOMAIN,ggs.myzaker.com,REJECT
-DOMAIN,track-cn.felink.com,REJECT
-DOMAIN,wn-x.jd.com,REJECT
+DOMAIN-SUFFIX,mob.5hito.com,REJECT
+DOMAIN-SUFFIX,zkres.myzaker.com,REJECT
+DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
+DOMAIN-SUFFIX,track-cn.felink.com,REJECT
+DOMAIN-SUFFIX,wn-x.jd.com,REJECT
 DOMAIN-SUFFIX,yex.youdao.com,REJECT
 DOMAIN-KEYWORD,admaster,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
 DOMAIN-SUFFIX,adpush.cn,REJECT
-DOMAIN,sdk.e.qq.com,REJECT
-DOMAIN,iadsdk.apple.com,REJECT
-DOMAIN,csi.gstatic.com,REJECT
+DOMAIN-SUFFIX,sdk.e.qq.com,REJECT
+DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
+DOMAIN-SUFFIX,csi.gstatic.com,REJECT
 DOMAIN-KEYWORD,ads,REJECT
-DOMAIN,graph.facebook.com,REJECT
-DOMAIN,player.ooyala.com,REJECT
-DOMAIN,ec.c.ooyala.com,REJECT
-DOMAIN-SUFFIX,g.doubleclick.net,REJECT
+DOMAIN-SUFFIX,graph.facebook.com,REJECT
+DOMAIN-SUFFIX,player.ooyala.com,REJECT
+DOMAIN-SUFFIX,ec.c.ooyala.com,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
 
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
@@ -559,12 +538,12 @@ USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet*,DIRECT
 
-DOMAIN,api.smoot.apple.com.cn,DIRECT
-DOMAIN,captive.apple.com,DIRECT
-DOMAIN,cn-smp-paymentservices.apple.com,DIRECT
-DOMAIN,smp-device.apple.com,DIRECT
-DOMAIN,smp-device-content.apple.com,DIRECT
-DOMAIN,sp.itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,api.smoot.apple.com.cn,DIRECT
+DOMAIN-SUFFIX,captive.apple.com,DIRECT
+DOMAIN-SUFFIX,cn-smp-paymentservices.apple.com,DIRECT
+DOMAIN-SUFFIX,smp-device.apple.com,DIRECT
+DOMAIN-SUFFIX,smp-device-content.apple.com,DIRECT
+DOMAIN-SUFFIX,sp.itunes.apple.com,DIRECT
 DOMAIN-SUFFIX,ess.apple.com,DIRECT
 DOMAIN-SUFFIX,push.apple.com,DIRECT
 DOMAIN-SUFFIX,gs-loc.apple.com,DIRECT
@@ -575,10 +554,10 @@ DOMAIN-SUFFIX,aaplimg.com,PROXY
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
 DOMAIN-SUFFIX,cn,DIRECT
-GEOIP,CN,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
+GEOIP,geoip:private,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
+GEOIP,geoip:cn,DIRECT
+DOMAIN-SUFFIX,geosite:cn,DIRECT
