--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -1,13 +1,19 @@
 [Rule]
+IP-CIDR,67.198.55.0/24,Proxy,no-resolve
+IP-CIDR,91.108.0.0/16,Proxy,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.23.127/32,Proxy
+
 IP-CIDR,17.0.0.0/8,PROXY
+DOMAIN-KEYWORD,v2ex,PROXY
+DOMAIN-KEYWORD,rarbg,PROXY
 DOMAIN-SUFFIX,sis001.com,PROXY
 DOMAIN-SUFFIX,18board.com,PROXY
 DOMAIN-SUFFIX,oops.udn.com,PROXY
 DOMAIN-SUFFIX,javlibrary.com,PROXY
-DOMAIN-KEYWORD,v2ex,PROXY
-DOMAIN-SUFFIX,data.flurry.com,PROXY
+DOMAIN-SUFFIX,flurry.com,PROXY
 DOMAIN-SUFFIX,tumblr.com,PROXY
-DOMAIN-KEYWORD,rarbg,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xn--i2ru8q2qg.com,PROXY
 DOMAIN-SUFFIX,cordcloud.me,PROXY
 DOMAIN-SUFFIX,playno1.com,PROXY
@@ -25,94 +31,75 @@ DOMAIN-SUFFIX,itunes.apple.com,PROXY
 DOMAIN-SUFFIX,itunes.com,PROXY 
 DOMAIN-SUFFIX,me.com,PROXY 
 DOMAIN-SUFFIX,mzstatic.com,PROXY 
-
-// Apple
-DOMAIN,adserver.unityads.unity3d.com,REJECT
-
-// Zhihu
-DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
-
-PROCESS-NAME,Telegram,PROXY
-
-IP-CIDR,67.198.55.0/24,Proxy,no-resolve
-IP-CIDR,91.108.0.0/16,Proxy,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.0.0/16,PROXY,no-resolve
-DOMAIN-SUFFIX,bbc.com,Proxy
-
+DOMAIN-SUFFIX,feedly.com,PROXY,
+DOMAIN-SUFFIX,googleapis.com,PROXY
+DOMAIN-SUFFIX,ytimg.com,PROXY
 DOMAIN-SUFFIX,cdninstagram.com,Proxy
-
-#disqus
+DOMAIN-SUFFIX,bbc.com,Proxy
 DOMAIN-SUFFIX,disquscdn.com,Proxy
-IP-CIDR,74.125.23.127/32,Proxy
-
-# top500 proxy list
-DOMAIN-KEYWORD,github,PROXY,force-remote-dns
-DOMAIN-KEYWORD,wikipedia,PROXY,force-remote-dns
-DOMAIN-KEYWORD,amazon,PROXY,force-remote-dns
-DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
-DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
-DOMAIN-KEYWORD,fbcdn,PROXY,force-remote-dns
-DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
-DOMAIN-KEYWORD,instagram,PROXY,force-remote-dns
-DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
-DOMAIN-KEYWORD,twimg,PROXY,force-remote-dns
-DOMAIN-SUFFIX,feedly.com,PROXY,,force-remote-dns
-DOMAIN-SUFFIX,googleapis.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
-DOMAIN-KEYWORD,appledaily,PROXY,force-remote-dns
-DOMAIN-KEYWORD,beetalk,PROXY,force-remote-dns
-DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
-DOMAIN-KEYWORD,dropbox,PROXY,force-remote-dns
-DOMAIN-KEYWORD,telegram,PROXY,force-remote-dns
-DOMAIN-KEYWORD,whatsapp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gmail.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,1e100.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,2mdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
-DOMAIN-SUFFIX,akamai.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bandwagonDOMAIN-SUFFIX.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,blogblog.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,chromeexperiments.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,creativelab5.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,crittercism.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,culturalspot.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,dartlang.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fbcdn.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,fbsbx.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gcr.io,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gosetsuden.jp,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,gwtproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,heroku.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,html5rocks.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,humblebundle.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,keyhole.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,kobo.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,kobobooks.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,madewithcode.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,material.io,PROXY,force-remote-dns
-DOMAIN-SUFFIX,messenger.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,netmarble.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nianticlabs.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pinimg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pixiv.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pubnub.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
-DOMAIN-SUFFIX,tensorflow.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,thefacebook.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,toggleable.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,torproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,unfiltered.news,PROXY,force-remote-dns
-DOMAIN-SUFFIX,waveprotocol.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,webmproject.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,webrtc.org,PROXY,force-remote-dns
+DOMAIN-KEYWORD,github,PROXY
+DOMAIN-KEYWORD,wikipedia,PROXY
+DOMAIN-KEYWORD,amazon,PROXY
+DOMAIN-KEYWORD,appledaily,PROXY
+DOMAIN-KEYWORD,blogspot,PROXY
+DOMAIN-KEYWORD,fbcdn,PROXY
+DOMAIN-KEYWORD,facebook,PROXY
+DOMAIN-KEYWORD,instagram,PROXY
+DOMAIN-KEYWORD,twitter,PROXY
+DOMAIN-KEYWORD,twimg,PROXY
+DOMAIN-KEYWORD,appledaily,PROXY
+DOMAIN-KEYWORD,beetalk,PROXY
+DOMAIN-KEYWORD,blogspot,PROXY
+DOMAIN-KEYWORD,dropbox,PROXY
+DOMAIN-KEYWORD,telegram,PROXY
+DOMAIN-KEYWORD,whatsapp,PROXY
+DOMAIN-SUFFIX,gmail.com,PROXY
+DOMAIN-SUFFIX,1e100.net,PROXY
+DOMAIN-SUFFIX,2mdn.net,PROXY
+DOMAIN-SUFFIX,abc.xyz,PROXY
+DOMAIN-SUFFIX,akamai.net,PROXY
+DOMAIN-SUFFIX,appspot.com,PROXY
+DOMAIN-SUFFIX,autodraw.com,PROXY
+DOMAIN-SUFFIX,blogblog.com,PROXY
+DOMAIN-SUFFIX,chromeexperiments.com,PROXY
+DOMAIN-SUFFIX,creativelab5.com,PROXY
+DOMAIN-SUFFIX,crittercism.com,PROXY
+DOMAIN-SUFFIX,culturalspot.org,PROXY
+DOMAIN-SUFFIX,dartlang.org,PROXY
+DOMAIN-SUFFIX,fb.com,PROXY
+DOMAIN-SUFFIX,fb.me,PROXY
+DOMAIN-SUFFIX,fbcdn.net,PROXY
+DOMAIN-SUFFIX,fbsbx.com,PROXY
+DOMAIN-SUFFIX,gcr.io,PROXY
+DOMAIN-SUFFIX,gosetsuden.jp,PROXY
+DOMAIN-SUFFIX,gvt1.com,PROXY
+DOMAIN-SUFFIX,gwtproject.org,PROXY
+DOMAIN-SUFFIX,heroku.com,PROXY
+DOMAIN-SUFFIX,html5rocks.com,PROXY
+DOMAIN-SUFFIX,humblebundle.com,PROXY
+DOMAIN-SUFFIX,keyhole.com,PROXY
+DOMAIN-SUFFIX,kobo.com,PROXY
+DOMAIN-SUFFIX,kobobooks.com,PROXY
+DOMAIN-SUFFIX,madewithcode.com,PROXY
+DOMAIN-SUFFIX,material.io,PROXY
+DOMAIN-SUFFIX,messenger.com,PROXY
+DOMAIN-SUFFIX,netmarble.com,PROXY
+DOMAIN-SUFFIX,nianticlabs.com,PROXY
+DOMAIN-SUFFIX,pinimg.com,PROXY
+DOMAIN-SUFFIX,pixiv.net,PROXY
+DOMAIN-SUFFIX,pubnub.com,PROXY
+DOMAIN-SUFFIX,t.co,PROXY
+DOMAIN-SUFFIX,tensorflow.org,PROXY
+DOMAIN-SUFFIX,thefacebook.com,PROXY
+DOMAIN-SUFFIX,toggleable.com,PROXY
+DOMAIN-SUFFIX,torproject.org,PROXY
+DOMAIN-SUFFIX,twitpic.com,PROXY
+DOMAIN-SUFFIX,unfiltered.news,PROXY
+DOMAIN-SUFFIX,waveprotocol.org,PROXY
+DOMAIN-SUFFIX,webmproject.org,PROXY
+DOMAIN-SUFFIX,webrtc.org,PROXY
 DOMAIN-SUFFIX,live.com,PROXY
+GEOIP,geoip:us,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
@@ -121,238 +108,6 @@ USER-AGENT,Coinbase*,PROXY
 USER-AGENT,Instagram*,PROXY
 USER-AGENT,YouTube*,PROXY
 
-
-# DIRECT
-DOMAIN-SUFFIX,12306.com,DIRECT
-DOMAIN-SUFFIX,126.net,DIRECT
-DOMAIN-SUFFIX,163.com,DIRECT
-DOMAIN-SUFFIX,360.cn,DIRECT
-DOMAIN-SUFFIX,360.com,DIRECT
-DOMAIN-SUFFIX,360buy.com,DIRECT
-DOMAIN-SUFFIX,360buyimg.com,DIRECT
-DOMAIN-SUFFIX,36kr.com,DIRECT
-DOMAIN-SUFFIX,58.com,DIRECT
-DOMAIN-SUFFIX,8686c.com,DIRECT
-DOMAIN-SUFFIX,abercrombie.com,DIRECT
-DOMAIN-SUFFIX,acfun.tv,DIRECT
-DOMAIN-SUFFIX,acgvideo.com,DIRECT
-DOMAIN-SUFFIX,adobesc.com,DIRECT
-DOMAIN-SUFFIX,air-matters.com,DIRECT
-DOMAIN-SUFFIX,air-matters.io,DIRECT
-DOMAIN-SUFFIX,aixifan.com,DIRECT
-DOMAIN-SUFFIX,akadns.net,DIRECT
-DOMAIN-SUFFIX,alicdn.com,DIRECT
-DOMAIN-SUFFIX,alipay.com,DIRECT
-DOMAIN-SUFFIX,alipayobjects.com,DIRECT
-DOMAIN-SUFFIX,aliyun.com,DIRECT
-DOMAIN-SUFFIX,amap.com,DIRECT
-DOMAIN-SUFFIX,aweme.snssdk.com,DIRECT
-DOMAIN-SUFFIX,apache.org,DIRECT
-DOMAIN-SUFFIX,api.crisp.chat,DIRECT
-DOMAIN-SUFFIX,appshike.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,autonavi.com,DIRECT
-DOMAIN-SUFFIX,bababian.com,DIRECT
-DOMAIN-SUFFIX,baidu.com,DIRECT
-DOMAIN-SUFFIX,battle.net,DIRECT
-DOMAIN-SUFFIX,bdimg.com,DIRECT
-DOMAIN-SUFFIX,bdstatic.com,DIRECT
-DOMAIN-SUFFIX,beatsbydre.com,DIRECT
-DOMAIN-SUFFIX,bilibili.cn,DIRECT
-DOMAIN-SUFFIX,bilibili.com,DIRECT
-DOMAIN-SUFFIX,bing.com,DIRECT
-DOMAIN-SUFFIX,caiyunapp.com,DIRECT
-DOMAIN-SUFFIX,ccgslb.com,DIRECT
-DOMAIN-SUFFIX,ccgslb.net,DIRECT
-DOMAIN-SUFFIX,chinacache.net,DIRECT
-DOMAIN-SUFFIX,chunbo.com,DIRECT
-DOMAIN-SUFFIX,chunboimg.com,DIRECT
-DOMAIN-SUFFIX,clashroyaleapp.com,DIRECT
-DOMAIN-SUFFIX,clouddn.com,DIRECT
-DOMAIN-SUFFIX,cloudsigma.com,DIRECT
-DOMAIN-SUFFIX,cloudxns.net,DIRECT
-DOMAIN-SUFFIX,cmfu.com,DIRECT
-DOMAIN-SUFFIX,cnbeta.com,DIRECT
-DOMAIN-SUFFIX,cnbetacdn.com,DIRECT
-DOMAIN-SUFFIX,conoha.jp,DIRECT
-DOMAIN-SUFFIX,culturedcode.com,DIRECT
-DOMAIN-SUFFIX,dct-cloud.com,DIRECT
-DOMAIN-SUFFIX,didialift.com,DIRECT
-DOMAIN-SUFFIX,douban.com,DIRECT
-DOMAIN-SUFFIX,doubanio.com,DIRECT
-DOMAIN-SUFFIX,douyu.com,DIRECT
-DOMAIN-SUFFIX,douyu.tv,DIRECT
-DOMAIN-SUFFIX,douyutv.com,DIRECT
-DOMAIN-SUFFIX,duokan.com,DIRECT
-DOMAIN-SUFFIX,duoshuo.com,DIRECT
-DOMAIN-SUFFIX,dytt8.net,DIRECT
-DOMAIN-SUFFIX,easou.com,DIRECT
-DOMAIN-SUFFIX,ecitic.com,DIRECT
-DOMAIN-SUFFIX,ecitic.net,DIRECT
-DOMAIN-SUFFIX,eclipse.org,DIRECT
-DOMAIN-SUFFIX,eudic.net,DIRECT
-DOMAIN-SUFFIX,ewqcxz.com,DIRECT
-DOMAIN-SUFFIX,feng.com,DIRECT
-DOMAIN-SUFFIX,fir.im,DIRECT
-DOMAIN-SUFFIX,frdic.com,DIRECT
-DOMAIN-SUFFIX,fresh-ideas.cc,DIRECT
-DOMAIN-SUFFIX,geetest.com,DIRECT
-DOMAIN-SUFFIX,godic.net,DIRECT
-DOMAIN-SUFFIX,goodread.com,DIRECT
-DOMAIN-SUFFIX,google.cn,DIRECT
-DOMAIN-SUFFIX,gtimg.com,DIRECT
-DOMAIN-SUFFIX,haibian.com,DIRECT
-DOMAIN-SUFFIX,hao123.com,DIRECT
-DOMAIN-SUFFIX,haosou.com,DIRECT
-DOMAIN-SUFFIX,hdslb.com,DIRECT
-DOMAIN-SUFFIX,hdslb.net,DIRECT
-DOMAIN-SUFFIX,hollisterco.com,DIRECT
-DOMAIN-SUFFIX,hongxiu.com,DIRECT
-DOMAIN-SUFFIX,hxcdn.net,DIRECT
-DOMAIN-SUFFIX,iciba.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,ifeng.com,DIRECT
-DOMAIN-SUFFIX,ifengimg.com,DIRECT
-DOMAIN-SUFFIX,images.unsplash.com,DIRECT
-DOMAIN-SUFFIX,images-amazon.com,DIRECT
-DOMAIN-SUFFIX,ipip.net,DIRECT
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
-DOMAIN-SUFFIX,ithome.com,DIRECT
-DOMAIN-SUFFIX,ixdzs.com,DIRECT
-DOMAIN-SUFFIX,jd.com,DIRECT
-DOMAIN-SUFFIX,jd.hk,DIRECT
-DOMAIN-SUFFIX,jianshu.com,DIRECT
-DOMAIN-SUFFIX,jianshu.io,DIRECT
-DOMAIN-SUFFIX,jianshuapi.com,DIRECT
-DOMAIN-SUFFIX,jiathis.com,DIRECT
-DOMAIN-SUFFIX,jomodns.com,DIRECT
-DOMAIN-SUFFIX,jsboxbbs.com,DIRECT
-DOMAIN-SUFFIX,knewone.com,DIRECT
-DOMAIN-SUFFIX,kuaidi100.com,DIRECT
-DOMAIN-SUFFIX,lecloud.com,DIRECT
-DOMAIN-SUFFIX,lemicp.com,DIRECT
-DOMAIN-SUFFIX,letv.com,DIRECT
-DOMAIN-SUFFIX,letvcloud.com,DIRECT
-DOMAIN-SUFFIX,lizhi.io,DIRECT
-DOMAIN-SUFFIX,localizecdn.com,DIRECT
-DOMAIN-SUFFIX,lucifr.com,DIRECT
-DOMAIN-SUFFIX,luoo.net,DIRECT
-DOMAIN-SUFFIX,lxdns.com,DIRECT
-DOMAIN-SUFFIX,mai.tn,DIRECT
-DOMAIN-SUFFIX,maven.org,DIRECT
-DOMAIN-SUFFIX,meizu.com,DIRECT
-DOMAIN-SUFFIX,mi.com,DIRECT
-DOMAIN-SUFFIX,miaopai.com,DIRECT
-DOMAIN-SUFFIX,miui.com,DIRECT
-DOMAIN-SUFFIX,miwifi.com,DIRECT
-DOMAIN-SUFFIX,mob.com,DIRECT
-DOMAIN-SUFFIX,moji.com,DIRECT
-DOMAIN-SUFFIX,moke.com,DIRECT
-DOMAIN-SUFFIX,mxhichina.com,DIRECT
-DOMAIN-SUFFIX,myqcloud.com,DIRECT
-DOMAIN-SUFFIX,myunlu.com,DIRECT
-DOMAIN-SUFFIX,netease.com,DIRECT
-DOMAIN-SUFFIX,nfoservers.com,DIRECT
-DOMAIN-SUFFIX,nssurge.com,DIRECT
-DOMAIN-SUFFIX,nuomi.com,DIRECT
-DOMAIN-SUFFIX,ourdvs.com,DIRECT
-DOMAIN-SUFFIX,overcast.fm,DIRECT
-DOMAIN-SUFFIX,paypal.com,DIRECT
-DOMAIN-SUFFIX,paypalobjects.com,DIRECT
-DOMAIN-SUFFIX,pgyer.com,DIRECT
-DOMAIN-SUFFIX,pixiv.net,DIRECT
-DOMAIN-SUFFIX,pstatp.com,DIRECT
-DOMAIN-SUFFIX,qbox.me,DIRECT
-DOMAIN-SUFFIX,qcloud.com,DIRECT
-DOMAIN-SUFFIX,qdaily.com,DIRECT
-DOMAIN-SUFFIX,qdmm.com,DIRECT
-DOMAIN-SUFFIX,qhimg.com,DIRECT
-DOMAIN-SUFFIX,qidian.com,DIRECT
-DOMAIN-SUFFIX,qihucdn.com,DIRECT
-DOMAIN-SUFFIX,qin.io,DIRECT
-DOMAIN-SUFFIX,qingmang.me,DIRECT
-DOMAIN-SUFFIX,qingmang.mobi,DIRECT
-DOMAIN-SUFFIX,qiniucdn.com,DIRECT
-DOMAIN-SUFFIX,qiniudn.com,DIRECT
-DOMAIN-SUFFIX,qiyi.com,DIRECT
-DOMAIN-SUFFIX,qiyipic.com,DIRECT
-DOMAIN-SUFFIX,qq.com,DIRECT
-DOMAIN-SUFFIX,qqurl.com,DIRECT
-DOMAIN-SUFFIX,rarbg.to,DIRECT
-DOMAIN-SUFFIX,rrmj.tv,DIRECT
-DOMAIN-SUFFIX,ruguoapp.com,DIRECT
-DOMAIN-SUFFIX,sandai.net,DIRECT
-DOMAIN-SUFFIX,sf-express.com,DIRECT
-DOMAIN-SUFFIX,sinaapp.com,DIRECT
-DOMAIN-SUFFIX,sinaimg.cn,DIRECT
-DOMAIN-SUFFIX,sinaimg.com,DIRECT
-DOMAIN-SUFFIX,smzdm.com,DIRECT
-DOMAIN-SUFFIX,snwx.com,DIRECT
-DOMAIN-SUFFIX,so.com,DIRECT
-DOMAIN-SUFFIX,sogou.com,DIRECT
-DOMAIN-SUFFIX,sogoucdn.com,DIRECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
-DOMAIN-SUFFIX,soku.com,DIRECT
-DOMAIN-SUFFIX,soso.com,DIRECT
-DOMAIN-SUFFIX,speedtest.net,DIRECT
-DOMAIN-SUFFIX,sspai.com,DIRECT
-DOMAIN-SUFFIX,startssl.com,DIRECT
-DOMAIN-SUFFIX,store.steampowered.com,DIRECT
-DOMAIN-SUFFIX,suning.com,DIRECT
-DOMAIN-SUFFIX,symcd.com,DIRECT
-DOMAIN-SUFFIX,taobao.com,DIRECT
-DOMAIN-SUFFIX,teamviewer.com,DIRECT
-DOMAIN-SUFFIX,tenpay.com,DIRECT
-DOMAIN-SUFFIX,tietuku.com,DIRECT
-DOMAIN-SUFFIX,tmall.com,DIRECT
-DOMAIN-SUFFIX,tmzvps.com,DIRECT
-DOMAIN-SUFFIX,trello.com,DIRECT
-DOMAIN-SUFFIX,trellocdn.com,DIRECT
-DOMAIN-SUFFIX,ttmeiju.com,DIRECT
-DOMAIN-SUFFIX,tudou.com,DIRECT
-DOMAIN-SUFFIX,udache.com,DIRECT
-DOMAIN-SUFFIX,upaiyun.com,DIRECT
-DOMAIN-SUFFIX,upyun.com,DIRECT
-DOMAIN-SUFFIX,uxengine.net,DIRECT
-DOMAIN-SUFFIX,wandoujia.com,DIRECT
-DOMAIN-SUFFIX,weather.bjango.com,DIRECT
-DOMAIN-SUFFIX,weather.com,DIRECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
-DOMAIN-SUFFIX,weico.cc,DIRECT
-DOMAIN-SUFFIX,weiphone.com,DIRECT
-DOMAIN-SUFFIX,weiphone.net,DIRECT
-DOMAIN-SUFFIX,werewolf.53site.com,DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,DIRECT
-DOMAIN-SUFFIX,workflowy.com,DIRECT
-DOMAIN-SUFFIX,xdrig.com,DIRECT
-DOMAIN-SUFFIX,xiami.com,DIRECT
-DOMAIN-SUFFIX,xiami.net,DIRECT
-DOMAIN-SUFFIX,xiaojukeji.com,DIRECT
-DOMAIN-SUFFIX,xiaomi.com,DIRECT
-DOMAIN-SUFFIX,xiaomi.net,DIRECT
-DOMAIN-SUFFIX,xiaomicp.com,DIRECT
-DOMAIN-SUFFIX,ximalaya.com,DIRECT
-DOMAIN-SUFFIX,xitek.com,DIRECT
-DOMAIN-SUFFIX,xmcdn.com,DIRECT
-DOMAIN-SUFFIX,xslb.net,DIRECT
-DOMAIN-SUFFIX,xteko.com,DIRECT
-DOMAIN-SUFFIX,xunlei.com,DIRECT
-DOMAIN-SUFFIX,yach.me,DIRECT
-DOMAIN-SUFFIX,yeepay.com,DIRECT
-DOMAIN-SUFFIX,yhd.com,DIRECT
-DOMAIN-SUFFIX,yinxiang.com,DIRECT
-DOMAIN-SUFFIX,yixia.com,DIRECT
-DOMAIN-SUFFIX,ykimg.com,DIRECT
-DOMAIN-SUFFIX,youdao.com,DIRECT
-DOMAIN-SUFFIX,youku.com,DIRECT
-DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
-DOMAIN-SUFFIX,zealer.com,DIRECT
-DOMAIN-SUFFIX,zgslb.net,DIRECT
-DOMAIN-SUFFIX,zhihu.com,DIRECT
-DOMAIN-SUFFIX,zhimg.com,DIRECT
-DOMAIN-SUFFIX,zmz002.com,DIRECT
-DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 
 // UA
 USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
@@ -365,19 +120,24 @@ USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 
-DOMAIN,badad.googleplex.com,REJECT
-DOMAIN,partner.googleadservices.com,REJECT
-DOMAIN,googleadservices.com,REJECT
-DOMAIN,static.googleadsserving.cn,REJECT
-DOMAIN,ads.gmodules.com,REJECT
-DOMAIN,ads.google.com,REJECT
-DOMAIN,afd.l.google.com,REJECT
-DOMAIN,googleadservices.com,REJECT
-DOMAIN,googleadsserving.cn,REJECT
-DOMAIN,googlecommerce.com,REJECT
-DOMAIN,googletagmanager.com,REJECT
-DOMAIN,googletagservices.com,REJECT
-DOMAIN,mobileads.google.com,REJECT
+// Apple
+DOMAIN-SUFFIX,adserver.unityads.unity3d.com,REJECT
+
+// Zhihu
+DOMAIN-SUFFIX,sugar.zhihu.com,REJECT
+DOMAIN-SUFFIX,badad.googleplex.com,REJECT
+DOMAIN-SUFFIX,partner.googleadservices.com,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,static.googleadsserving.cn,REJECT
+DOMAIN-SUFFIX,ads.gmodules.com,REJECT
+DOMAIN-SUFFIX,ads.google.com,REJECT
+DOMAIN-SUFFIX,afd.l.google.com,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googleadsserving.cn,REJECT
+DOMAIN-SUFFIX,googlecommerce.com,REJECT
+DOMAIN-SUFFIX,googletagmanager.com,REJECT
+DOMAIN-SUFFIX,googletagservices.com,REJECT
+DOMAIN-SUFFIX,mobileads.google.com,REJECT
 DOMAIN-SUFFIX,pagead.google.com,REJECT
 DOMAIN-SUFFIX,pagead.l.google.com,REJECT
 DOMAIN-SUFFIX,pagead-tpc.l.google.com,REJECT
@@ -471,7 +231,6 @@ DOMAIN-SUFFIX,effectivemeasure.net,REJECT
 
 DOMAIN-SUFFIX,s.qhupdate.com,REJECT
 DOMAIN-SUFFIX,hs.qhupdate.com,REJECT
-DOMAIN-SUFFIX,js.users.51.la,REJECT
 DOMAIN-SUFFIX,referrer.disqus.com,REJECT
 DOMAIN-SUFFIX,static.criteo.net,REJECT
 DOMAIN-SUFFIX,xdadevelopers.browsi.mobi,REJECT
@@ -495,7 +254,7 @@ DOMAIN-SUFFIX,ggs.myzaker.com,REJECT
 DOMAIN-SUFFIX,track-cn.felink.com,REJECT
 DOMAIN-SUFFIX,wn-x.jd.com,REJECT
 DOMAIN-SUFFIX,yex.youdao.com,REJECT
-DOMAIN-KEYWORD,admaster,REJECT
+
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
 DOMAIN-SUFFIX,adpush.cn,REJECT
@@ -507,7 +266,7 @@ DOMAIN-SUFFIX,graph.facebook.com,REJECT
 DOMAIN-SUFFIX,player.ooyala.com,REJECT
 DOMAIN-SUFFIX,ec.c.ooyala.com,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
-
+DOMAIN-KEYWORD,admaster,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,cnzz,REJECT
@@ -515,8 +274,8 @@ DOMAIN-KEYWORD,mopub,REJECT
 USER-AGENT,wpsoffice*,REJECT
 DOMAIN-SUFFIX,cache.docer.com,,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
-DOMAIN,tqtdata1.weathercn.com,REJECT
-DOMAIN,tqtdata.weathercn.com,REJECT
+DOMAIN-SUFFIX,tqtdata1.weathercn.com,REJECT
+DOMAIN-SUFFIX,tqtdata.weathercn.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,api.growingio.com,REJECT
 DOMAIN-SUFFIX,stats.mlinks.cc,REJECT
@@ -554,10 +313,9 @@ DOMAIN-SUFFIX,aaplimg.com,PROXY
 DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
 DOMAIN-SUFFIX,cn,DIRECT
-DOMAIN-SUFFIX,local,DIRECT
+DOMAIN-SUFFIX,geosite:cn,DIRECT
 GEOIP,geoip:private,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
 GEOIP,geoip:cn,DIRECT
-DOMAIN-SUFFIX,geosite:cn,DIRECT
