--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -99,7 +99,7 @@ DOMAIN-SUFFIX,waveprotocol.org,PROXY
 DOMAIN-SUFFIX,webmproject.org,PROXY
 DOMAIN-SUFFIX,webrtc.org,PROXY
 DOMAIN-SUFFIX,live.com,PROXY
-GEOIP,geoip:us,PROXY
+GEOIP,us,PROXY
 
 // UA
 USER-AGENT,%E7%BA%BD%E7%BA%A6%E6%97%B6%E6%8A%A5*,PROXY
@@ -314,8 +314,8 @@ DOMAIN-SUFFIX,push-apple.com.akadns.net,DIRECT
 
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,geosite:cn,DIRECT
-GEOIP,geoip:private,DIRECT
+GEOIP,private,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/12,DIRECT
-GEOIP,geoip:cn,DIRECT
+GEOIP,cn,DIRECT
