--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -22,44 +22,14 @@
 
 // me
 
-//墨迹
-HOST-SUFFIX,blackfish.cn,REJECT
-HOST,app.appsflyer.com,REJECT
-HOST,wcr.api.moji.com,REJECT
-HOST-SUFFIX,lehaitv.com,REJECT
-HOST,ssch.api.moji.com,REJECT
-HOST,anqi.api.moji.com,REJECT
-HOST,sns.api.moji.com,REJECT
-HOST,upt.api.moji.com,REJECT
-HOST,msg.api.moji.com,REJECT
-HOST,mme.api.moji.com,REJECT
-HOST,ugc.api.moji.com,REJECT
-HOST,pc.moji.com,REJECT
-HOST,ip.chinaz.com,REJECT
-HOST,ssfc.api.moji.com,REJECT
-HOST,events.mapbox.cn,REJECT
-HOST-SUFFIX,bugly.qq.com,REJECT
-HOST-SUFFIX,gdt.qq.com,REJECT
-HOST,cdn2.moji002.com/webpush/ad2,REJECT
-HOST-SUFFIX,adpush.cn,REJECT
-HOST,sdk.e.qq.com,REJECT
-HOST,stat.moji.com,REJECT
-HOST,cdn.moji.com,REJECT
-HOST,v2.log.moji.com,REJECT
-HOST,ffds.api.moji.com,REJECT
-HOST,inews.gtimg.com,REJECT
-HOST,oss4liview.moji.com,REJECT
-HOST,ad.api.moji.com,REJECT
-HOST,v1.log.moji.com,REJECT
 HOST,iadsdk.apple.com,REJECT
 HOST,csi.gstatic.com,REJECT
 HOST-KEYWORD,ads,REJECT
 HOST,graph.facebook.com,REJECT
 HOST,player.ooyala.com,REJECT
 HOST,ec.c.ooyala.com,REJECT
-HOST-SUFFIX,g.doubleclick.net,REJECT
+HOST-SUFFIX,doubleclick.net,REJECT
 
-HOST-SUFFIX,flurry.com,REJECT
 HOST-KEYWORD,analytics,REJECT
 HOST-KEYWORD,umeng,REJECT
 HOST-KEYWORD,cnzz,REJECT
@@ -250,12 +220,10 @@ USER-AGENT,YouTube*,PROXY
 # DIRECT
 
 // UA
-USER-AGENT, %E4%BA%AC%E4%B8%9C%E5%88%B0%E5%AE%B6*,DIRECT
 USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
 USER-AGENT,*Vainglory* ,DIRECT
 USER-AGENT,arrowio*,DIRECT
 USER-AGENT,balls*,DIRECT
-USER-AGENT,Best%20Trace*,DIRECT
 USER-AGENT,hide*,DIRECT
 USER-AGENT,LastPass*,DIRECT
 USER-AGENT,MegaWerewolf*,DIRECT
@@ -268,14 +236,14 @@ USER-AGENT,WeChat*,DIRECT
 
 HOST,badad.googleplex.com,REJECT
 HOST,partner.googleadservices.com,REJECT
-HOST,www.googleadservices.com,REJECT
+HOST,googleadservices.com,REJECT
 HOST,static.googleadsserving.cn,REJECT
 HOST,ads.gmodules.com,REJECT
 HOST,ads.google.com,REJECT
 HOST,afd.l.google.com,REJECT
-HOST,googleadservices.com,REJECT
-HOST,googleadsserving.cn,REJECT
-HOST,googlecommerce.com,REJECT
+HOST-SUFFIX,googleadservices.com,REJECT
+HOST-SUFFIX,googleadsserving.cn,REJECT
+HOST-SUFFIX,googlecommerce.com,REJECT
 HOST,googletagmanager.com,REJECT
 HOST,googletagservices.com,REJECT
 HOST,mobileads.google.com,REJECT
@@ -328,20 +296,7 @@ HOST-SUFFIX,data.bilibili.com,REJECT
 HOST-SUFFIX,cm.bilibili.com,REJECT
 
 # 51LA
-HOST-SUFFIX,ia.51.la,REJECT
-HOST-SUFFIX,js.users.51.la,REJECT
-HOST-SUFFIX,img.users.51.la,REJECT
-HOST-SUFFIX,new.users.51.la,REJECT
-HOST-SUFFIX,zzimg.51.la,REJECT
 HOST-SUFFIX,tc.51la.net,REJECT
-HOST-SUFFIX,icon.51.la,REJECT
-HOST-SUFFIX,icon.users.51.la,REJECT
-HOST-SUFFIX,js3.users.51.la,REJECT
-HOST-SUFFIX,quote.51.la,REJECT
-HOST-SUFFIX,vip.51.la,REJECT
-HOST-SUFFIX,web.51.la,REJECT
-HOST-SUFFIX,web1.51.la,REJECT
-HOST-SUFFIX,web2.51.la,REJECT
 HOST-SUFFIX,51.la,REJECT
 
 # CSDN
@@ -392,7 +347,6 @@ HOST-SUFFIX,.effectivemeasure.net,REJECT
 # Others
 HOST-SUFFIX,s.qhupdate.com,REJECT
 HOST-SUFFIX,hs.qhupdate.com,REJECT
-HOST-SUFFIX,js.users.51.la,REJECT
 HOST-SUFFIX,referrer.disqus.com,REJECT
 HOST-SUFFIX,static.criteo.net,REJECT
 HOST-SUFFIX,xdadevelopers.browsi.mobi,REJECT
