--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -198,6 +198,17 @@ USER-AGENT,WeChat*,DIRECT
 
 // AD Block
 // me
+HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
+HOST-SUFFIX,zkres.myzaker.com,REJECT
+HOST-SUFFIX,ggs.myzaker.com,REJECT
+HOST-SUFFIX,t.h5data.com,REJECT
+HOST,api.weather.ifjing.com/adapi,REJECT
+HOST-SUFFIX,oimageb4.ydstatic.com,REJECT
+HOST-SUFFIX,appuse.ifjing.com,REJECT
+HOST-SUFFIX,mob.5hito.com,REJECT
+HOST-SUFFIX,track-cn.felink.com,REJECT
+HOST-SUFFIX,oimagec8.ydstatic.com,REJECT
+HOST-SUFFIX,log.yex.youdao.com,REJECT
 HOST,csi.gstatic.com,REJECT
 HOST,graph.facebook.com,REJECT
 HOST,player.ooyala.com,REJECT
