--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -19,7 +19,6 @@
 [TCP]
 
 //PROXY
-IP-CIDR,17.0.0.0/8,PROXY
 HOST-SUFFIX,sis001.com,PROXY
 HOST-SUFFIX,18board.com,PROXY
 HOST-SUFFIX,oops.udn.com,PROXY
@@ -28,15 +27,14 @@ HOST-KEYWORD,v2ex,PROXY
 HOST-SUFFIX,tumblr.com,PROXY
 HOST-SUFFIX,lxysh.top,DIRECT
 HOST-KEYWORD,rarbg,PROXY
-HOST-SUFFIX,xn--i2ru8q2qg.com,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,playno1.com,PROXY
 
 //Apple
-HOST-SUFFIX,xp.apple.com,PROXY 
-USER-AGENT,com.apple.appstored*,PROXY// iOS App Store
-USER-AGENT,*com.apple.mobileme.fmip1,PROXY
-USER-AGENT,*WeatherFoundation*,PROXY
+HOST-SUFFIX,xp.apple.com,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT// iOS App Store
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
 
 //Siri
 USER-AGENT,AssistantServices*,PROXY //Siri
@@ -44,12 +42,11 @@ USER-AGENT,MobileAsset*,PROXY
 USER-AGENT,Siri*,PROXY
 USER-AGENT,*siri*,PROXY
 
-HOST-SUFFIX,itunes.apple.com,PROXY
-HOST-SUFFIX,aaplimg.com,PROXY
-HOST-SUFFIX,itunes.com,PROXY 
-HOST-SUFFIX,me.com,PROXY 
-HOST-SUFFIX,mzstatic.com,PROXY // App Store & iTunes Images
-IP-CIDR,17.0.0.0/8,PROXY
+HOST-SUFFIX,itunes.apple.com,DIRECT
+HOST-SUFFIX,aaplimg.com,DIRECT
+HOST-SUFFIX,itunes.com,DIRECT
+HOST-SUFFIX,me.com,DIRECT
+HOST-SUFFIX,mzstatic.com,DIRECT// App Store & iTunes Images
 
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT // Settings
 HOST,api.smoot.apple.com.cn,DIRECT
@@ -66,6 +63,7 @@ HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
 HOST-SUFFIX,icloud.com,DIRECT
 HOST-SUFFIX,icloud-content.com,DIRECT
 USER-AGENT,cloudd*,DIRECT //iCloud
+IP-CIDR,17.0.0.0/8,DIRECT
 
 //支付相关
 USER-AGENT,*Passbook*,DIRECT
