--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -5,7 +5,7 @@ IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.23.127/32,Proxy
 
-IP-CIDR,17.0.0.0/8,PROXY
+IP-CIDR,17.0.0.0/8,DIRECT
 DOMAIN-KEYWORD,v2ex,PROXY
 DOMAIN-KEYWORD,rarbg,PROXY
 DOMAIN-SUFFIX,sis001.com,PROXY
@@ -17,20 +17,20 @@ DOMAIN-SUFFIX,tumblr.com,PROXY
 DOMAIN-SUFFIX,xn--i2ru8q2qg.com,PROXY
 DOMAIN-SUFFIX,cordcloud.me,PROXY
 DOMAIN-SUFFIX,playno1.com,PROXY
-DOMAIN-SUFFIX,xp.apple.com,PROXY 
-USER-AGENT,com.apple.appstored*,PROXY// iOS App Store
-USER-AGENT,*com.apple.mobileme.fmip1,PROXY
-USER-AGENT,*WeatherFoundation*,PROXY
+DOMAIN-SUFFIX,xp.apple.com,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT// iOS App Store
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
 USER-AGENT,AssistantServices*,PROXY //Siri
-USER-AGENT,MobileAsset*,PROXY
-USER-AGENT,Siri*,PROXY
-USER-AGENT,*siri*,PROXY
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
 USER-AGENT,cloudd*,DIRECT 
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-DOMAIN-SUFFIX,itunes.apple.com,PROXY
-DOMAIN-SUFFIX,itunes.com,PROXY 
-DOMAIN-SUFFIX,me.com,PROXY 
-DOMAIN-SUFFIX,mzstatic.com,PROXY 
+DOMAIN-SUFFIX,itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN-SUFFIX,feedly.com,PROXY,
 DOMAIN-SUFFIX,googleapis.com,PROXY
 DOMAIN-SUFFIX,ytimg.com,PROXY
@@ -99,14 +99,6 @@ DOMAIN-SUFFIX,waveprotocol.org,PROXY
 DOMAIN-SUFFIX,webmproject.org,PROXY
 DOMAIN-SUFFIX,webrtc.org,PROXY
 DOMAIN-SUFFIX,live.com,PROXY
-GEOIP,us,PROXY
-
-// UA
-USER-AGENT,*Telegram*,PROXY
-USER-AGENT,Coinbase*,PROXY
-USER-AGENT,Instagram*,PROXY
-USER-AGENT,YouTube*,PROXY
-
 
 // UA
 USER-AGENT,balls*,DIRECT
