--- a/kitsunebi.conf
+++ b/kitsunebi.conf
@@ -12,28 +12,10 @@ DOMAIN-SUFFIX,sis001.com,PROXY
 DOMAIN-SUFFIX,18board.com,PROXY
 DOMAIN-SUFFIX,oops.udn.com,PROXY
 DOMAIN-SUFFIX,javlibrary.com,PROXY
-DOMAIN-SUFFIX,flurry.com,PROXY
-DOMAIN-SUFFIX,tumblr.com,PROXY
-DOMAIN-SUFFIX,xn--i2ru8q2qg.com,PROXY
 DOMAIN-SUFFIX,cordcloud.me,PROXY
 DOMAIN-SUFFIX,playno1.com,PROXY
-DOMAIN-SUFFIX,xp.apple.com,DIRECT
-USER-AGENT,com.apple.appstored*,DIRECT// iOS App Store
-USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
-USER-AGENT,*WeatherFoundation*,DIRECT
-USER-AGENT,AssistantServices*,PROXY //Siri
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
-USER-AGENT,cloudd*,DIRECT 
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-DOMAIN-SUFFIX,itunes.apple.com,DIRECT
-DOMAIN-SUFFIX,itunes.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
+
 DOMAIN-SUFFIX,feedly.com,PROXY,
-DOMAIN-SUFFIX,googleapis.com,PROXY
-DOMAIN-SUFFIX,ytimg.com,PROXY
 DOMAIN-SUFFIX,cdninstagram.com,Proxy
 DOMAIN-SUFFIX,bbc.com,Proxy
 DOMAIN-SUFFIX,disquscdn.com,Proxy
@@ -52,10 +34,7 @@ DOMAIN-KEYWORD,beetalk,PROXY
 DOMAIN-KEYWORD,blogspot,PROXY
 DOMAIN-KEYWORD,dropbox,PROXY
 DOMAIN-KEYWORD,telegram,PROXY
-DOMAIN-KEYWORD,whatsapp,PROXY
 DOMAIN-SUFFIX,gmail.com,PROXY
-DOMAIN-SUFFIX,1e100.net,PROXY
-DOMAIN-SUFFIX,2mdn.net,PROXY
 DOMAIN-SUFFIX,abc.xyz,PROXY
 DOMAIN-SUFFIX,akamai.net,PROXY
 DOMAIN-SUFFIX,appspot.com,PROXY
@@ -66,9 +45,6 @@ DOMAIN-SUFFIX,creativelab5.com,PROXY
 DOMAIN-SUFFIX,crittercism.com,PROXY
 DOMAIN-SUFFIX,culturalspot.org,PROXY
 DOMAIN-SUFFIX,dartlang.org,PROXY
-DOMAIN-SUFFIX,fb.com,PROXY
-DOMAIN-SUFFIX,fb.me,PROXY
-DOMAIN-SUFFIX,fbcdn.net,PROXY
 DOMAIN-SUFFIX,fbsbx.com,PROXY
 DOMAIN-SUFFIX,gcr.io,PROXY
 DOMAIN-SUFFIX,gosetsuden.jp,PROXY
@@ -78,7 +54,6 @@ DOMAIN-SUFFIX,heroku.com,PROXY
 DOMAIN-SUFFIX,html5rocks.com,PROXY
 DOMAIN-SUFFIX,humblebundle.com,PROXY
 DOMAIN-SUFFIX,keyhole.com,PROXY
-DOMAIN-SUFFIX,kobo.com,PROXY
 DOMAIN-SUFFIX,kobobooks.com,PROXY
 DOMAIN-SUFFIX,madewithcode.com,PROXY
 DOMAIN-SUFFIX,material.io,PROXY
@@ -101,10 +76,7 @@ DOMAIN-SUFFIX,webrtc.org,PROXY
 DOMAIN-SUFFIX,live.com,PROXY
 
 // UA
-USER-AGENT,balls*,DIRECT
-USER-AGENT,LastPass*,DIRECT
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,Microsoft*,DIRECT
+USER-AGENT,MicroMessenger*,DIRECTT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
@@ -285,6 +257,20 @@ USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
 USER-AGENT,trustd*,DIRECT
 USER-AGENT,Wallet*,DIRECT
+DOMAIN-SUFFIX,xp.apple.com,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT// iOS App Store
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,DIRECT
+USER-AGENT,AssistantServices*,DIRECT //Siri
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
+USER-AGENT,cloudd*,DIRECT 
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+DOMAIN-SUFFIX,itunes.apple.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
 
 DOMAIN-SUFFIX,api.smoot.apple.com.cn,DIRECT
 DOMAIN-SUFFIX,captive.apple.com,DIRECT
