--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -2,14 +2,11 @@
 
 [General]
 bypass-system = true
-dns-server = 202.141.162.123,119.29.29.29,8.8.8.8
-skip-proxy = lxysh.top,127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
+dns-server = 202.141.162.123,182.254.116.116,114.114.114.114
+skip-proxy = lxysh.top,127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 [Rule]
-
-[TCP]
-
 // me
 DOMAIN,mob.5hito.com,REJECT
 DOMAIN,zkres.myzaker.com,REJECT
@@ -20,24 +17,15 @@ DOMAIN-SUFFIX,yex.youdao.com,REJECT
 DOMAIN-KEYWORD,admaster,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,gdt.qq.com,REJECT
-DOMAIN,cdn2.moji002.com/webpush/ad2,REJECT
 DOMAIN-SUFFIX,adpush.cn,REJECT
 DOMAIN,sdk.e.qq.com,REJECT
-DOMAIN,stat.moji.com,REJECT
-DOMAIN,cdn.moji.com,REJECT
-DOMAIN,v2.log.moji.com,REJECT
-DOMAIN,ffds.api.moji.com,REJECT
-DOMAIN,inews.gtimg.com,REJECT
-DOMAIN,oss4liview.moji.com,REJECT
-DOMAIN,ad.api.moji.com,REJECT
-DOMAIN,v1.log.moji.com,REJECT
 DOMAIN,iadsdk.apple.com,REJECT
 DOMAIN,csi.gstatic.com,REJECT
 DOMAIN-KEYWORD,ads,REJECT
 DOMAIN,graph.facebook.com,REJECT
 DOMAIN,player.ooyala.com,REJECT
 DOMAIN,ec.c.ooyala.com,REJECT
-DOMAIN-SUFFIX,g.doubleclick.net,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
 
 DOMAIN-SUFFIX,flurry.com,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
