--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -30,14 +30,15 @@ HOST-SUFFIX,yt3.ggpht.com,PROXY
 HOST-KEYWORD,speedtest,PROXY
 HOST-SUFFIX,sis001.com,PROXY
 HOST-SUFFIX,18board.com,PROXY
-HOST-SUFFIX,oops.udn.com,PROXY
+HOST-SUFFIX,udn.com,PROXY
 HOST-SUFFIX,javlibrary.com,PROXY
 HOST-KEYWORD,v2ex.com,PROXY
 HOST-SUFFIX,tumblr.com,PROXY
-HOST-SUFFIX,lxysh.top,DIRECT
 HOST-KEYWORD,rarbg,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY,resolve-on-proxy
 HOST-SUFFIX,playno1.com,PROXY
+
+HOST-SUFFIX,lxysh.top,DIRECT
 HOST-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
