--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -10,18 +10,19 @@
 ☁️Apple = ssid, default = PROXY, cellular = PROXY
 
 [DNS]
-182.254.116.116,114.114.114.114
+
 
 [REWRITE]
-^https?://www.google.com.hk url 302 https://www.google.com
-^https?://(www.)?g.com.hk url modify https://www.google.com
+^https?://www.google.cn url 302 https://www.google.com
+^https?://(www.)?g.cn url modify https://www.google.com
 
 [URL-REJECTION]
 ^http?://api.weather.ifjing.com/adapi/
 
 [TCP]
+//me
+HOST-SUFFIX,lxysh.top,DIRECT
 HOST-SUFFIX,duckduckgo.com,PROXY
-HOST-SUFFIX,data.flurry.com,PROXY
 HOST-SUFFIX,dorcelclub.com,PROXY
 HOST-SUFFIX,bit.ly,PROXY
 IP-CIDR,40.100.0.0/10,PROXY
@@ -35,10 +36,10 @@ HOST-SUFFIX,javlibrary.com,PROXY
 HOST-KEYWORD,v2ex.com,PROXY
 HOST-SUFFIX,tumblr.com,PROXY
 HOST-KEYWORD,rarbg,PROXY
-HOST-SUFFIX,cordcloud.me,PROXY,resolve-on-proxy
+HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,playno1.com,PROXY
+HOST-SUFFIX,flurry.com,REJECT
 
-HOST-SUFFIX,lxysh.top,DIRECT
 HOST-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
@@ -47,16 +48,15 @@ USER-AGENT,AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 HOST-SUFFIX,itunes.apple.com,DIRECT
 HOST-SUFFIX,aaplimg.com,DIRECT
 HOST-SUFFIX,itunes.com,DIRECT
 HOST-SUFFIX,me.com,DIRECT
 HOST-SUFFIX,mzstatic.com,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
 HOST,api.smoot.apple.com.cn,DIRECT
-HOST,captive.apple.com,DIRECT
+HOST-SUFFIX,apple.com,DIRECT
 HOST,cn-smp-paymentservices.apple.com,DIRECT
 HOST,smp-device.apple.com,DIRECT
 HOST,smp-device-content.apple.com,DIRECT
