--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -14,7 +14,7 @@
 
 [REWRITE]
 ^https?://www.google.cn url 302 https://www.google.com
-^https?://(www.)?g.cn url modify https://www.google.com
+^https?://(www.)?g.cn url 302 https://www.google.com
 
 [URL-REJECTION]
 ^http?://api.weather.ifjing.com/adapi/
@@ -39,6 +39,7 @@ HOST-KEYWORD,rarbg,PROXY
 HOST-SUFFIX,cordcloud.me,PROXY
 HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,flurry.com,REJECT
+DOMAIN-SUFFIX,lnk0.com,REJECT
 
 HOST-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
@@ -196,7 +197,7 @@ HOST-SUFFIX,kingsoft-office-service.com,REJECT
 HOST,tqtdata1.weathercn.com,REJECT
 HOST,tqtdata.weathercn.com,REJECT
 HOST-SUFFIX,mob.com,REJECT
-HOST-SUFFIX,api.growingio.com,REJECT
+HOST-SUFFIX,growingio.com,REJECT
 HOST-SUFFIX,stats.mlinks.cc,REJECT
 HOST-SUFFIX,sugar.zhihu.com,REJECT
 HOST,badad.googleplex.com,REJECT
@@ -626,6 +627,15 @@ HOST-KEYWORD,umtrack,REJECT
 HOST-KEYWORD,usage,REJECT
 HOST-KEYWORD,wlmonitor,REJECT
 HOST-KEYWORD,zjtoolbar,REJECT
+// iQiyi
+DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
+DOMAIN,ifacelog.iqiyi.com,REJECT
+DOMAIN,mbdlog.iqiyi.com,REJECT
+DOMAIN,msg.71.am,REJECT
+IP-CIDR,101.227.97.240/32,REJECT,no-resolve
+IP-CIDR,101.227.200.28/32,REJECT,no-resolve
+IP-CIDR,124.192.153.42/32,REJECT,no-resolve
+
 HOST-SUFFIX,12306.com,DIRECT
 HOST-SUFFIX,126.net,DIRECT
 HOST-SUFFIX,163.com,DIRECT
@@ -639,20 +649,14 @@ HOST-SUFFIX,alipayobjects.com,DIRECT
 HOST-SUFFIX,aliyun.com,DIRECT
 HOST-SUFFIX,amap.com,DIRECT
 HOST-SUFFIX,apache.org,DIRECT
-HOST-SUFFIX,api.crisp.chat,DIRECT
-HOST-SUFFIX,appshike.com,DIRECT
 HOST-SUFFIX,appstore.com,DIRECT
 HOST-SUFFIX,autonavi.com,DIRECT
-HOST-SUFFIX,bababian.com,DIRECT
 HOST-SUFFIX,baidu.com,DIRECT
 HOST-SUFFIX,battle.net,DIRECT
 HOST-SUFFIX,bdimg.com,DIRECT
-HOST-SUFFIX,bdstatic.com,DIRECT
-HOST-SUFFIX,beatsbydre.com,DIRECT
 HOST-SUFFIX,bilibili.com,DIRECT
 HOST-SUFFIX,bing.com,DIRECT
 HOST-SUFFIX,caiyunapp.com,DIRECT
-HOST-SUFFIX,ccgslb.com,DIRECT
 HOST-SUFFIX,chinacache.net,DIRECT
 HOST-SUFFIX,clashroyaleapp.com,DIRECT
 HOST-SUFFIX,clouddn.com,DIRECT
@@ -661,34 +665,20 @@ HOST-SUFFIX,cloudxns.net,DIRECT
 HOST-SUFFIX,cmfu.com,DIRECT
 HOST-SUFFIX,cnbeta.com,DIRECT
 HOST-SUFFIX,cnbetacdn.com,DIRECT
-HOST-SUFFIX,conoha.jp,DIRECT
-HOST-SUFFIX,culturedcode.com,DIRECT
-HOST-SUFFIX,dct-cloud.com,DIRECT
 HOST-SUFFIX,didialift.com,DIRECT
 HOST-SUFFIX,douban.com,DIRECT
 HOST-SUFFIX,doubanio.com,DIRECT
 HOST-SUFFIX,duokan.com,DIRECT
 HOST-SUFFIX,duoshuo.com,DIRECT
 HOST-SUFFIX,dytt8.net,DIRECT
-HOST-SUFFIX,easou.com,DIRECT
-HOST-SUFFIX,ecitic.com,DIRECT
-HOST-SUFFIX,eclipse.org,DIRECT
-HOST-SUFFIX,eudic.net,DIRECT
-HOST-SUFFIX,ewqcxz.com,DIRECT
 HOST-SUFFIX,feng.com,DIRECT
-HOST-SUFFIX,fir.im,DIRECT
-HOST-SUFFIX,frdic.com,DIRECT
-HOST-SUFFIX,fresh-ideas.cc,DIRECT
 HOST-SUFFIX,geetest.com,DIRECT
 HOST-SUFFIX,godic.net,DIRECT
 HOST-SUFFIX,gtimg.com,DIRECT
-HOST-SUFFIX,haibian.com,DIRECT
-HOST-SUFFIX,hdslb.com,DIRECT
 HOST-SUFFIX,hollisterco.com,DIRECT
 HOST-SUFFIX,hongxiu.com,DIRECT
 HOST-SUFFIX,hxcdn.net,DIRECT
 HOST-SUFFIX,iciba.com,DIRECT
-HOST-SUFFIX,icloud.com,DIRECT
 HOST-SUFFIX,ifeng.com,DIRECT
 HOST-SUFFIX,ifengimg.com,DIRECT
 HOST-SUFFIX,images.unsplash.com,DIRECT
@@ -696,14 +686,9 @@ HOST-SUFFIX,images-amazon.com,DIRECT
 HOST-SUFFIX,ipip.net,DIRECT
 HOST-SUFFIX,iqiyi.com,DIRECT
 HOST-SUFFIX,ithome.com,DIRECT
-HOST-SUFFIX,ixdzs.com,DIRECT
 HOST-SUFFIX,jd.com,DIRECT
 HOST-SUFFIX,jianshu.com,DIRECT
 HOST-SUFFIX,jianshuapi.com,DIRECT
-HOST-SUFFIX,jiathis.com,DIRECT
-HOST-SUFFIX,jomodns.com,DIRECT
-HOST-SUFFIX,jsboxbbs.com,DIRECT
-HOST-SUFFIX,knewone.com,DIRECT
 HOST-SUFFIX,kuaidi100.com,DIRECT
 HOST-SUFFIX,lecloud.com,DIRECT
 HOST-SUFFIX,lemicp.com,DIRECT
@@ -711,20 +696,13 @@ HOST-SUFFIX,letv.com,DIRECT
 HOST-SUFFIX,letvcloud.com,DIRECT
 HOST-SUFFIX,lizhi.io,DIRECT
 HOST-SUFFIX,localizecdn.com,DIRECT
-HOST-SUFFIX,lucifr.com,DIRECT
-HOST-SUFFIX,luoo.net,DIRECT
-HOST-SUFFIX,lxdns.com,DIRECT
 HOST-SUFFIX,mai.tn,DIRECT
-HOST-SUFFIX,maven.org,DIRECT
 HOST-SUFFIX,meizu.com,DIRECT
 HOST-SUFFIX,mi.com,DIRECT
 HOST-SUFFIX,miaopai.com,DIRECT
 HOST-SUFFIX,miui.com,DIRECT
 HOST-SUFFIX,miwifi.com,DIRECT
-HOST-SUFFIX,mob.com,DIRECT
 HOST-SUFFIX,moji.com,DIRECT
-HOST-SUFFIX,moke.com,DIRECT
-HOST-SUFFIX,mxhichina.com,DIRECT
 HOST-SUFFIX,myqcloud.com,DIRECT
 HOST-SUFFIX,myunlu.com,DIRECT
 HOST-SUFFIX,netease.com,DIRECT
@@ -733,11 +711,6 @@ HOST-SUFFIX,nssurge.com,DIRECT
 HOST-SUFFIX,nuomi.com,DIRECT
 HOST-SUFFIX,ourdvs.com,DIRECT
 HOST-SUFFIX,overcast.fm,DIRECT
-HOST-SUFFIX,paypal.com,DIRECT
-HOST-SUFFIX,paypalobjects.com,DIRECT
-HOST-SUFFIX,pgyer.com,DIRECT
-HOST-SUFFIX,pstatp.com,DIRECT
-HOST-SUFFIX,qbox.me,DIRECT
 HOST-SUFFIX,qcloud.com,DIRECT
 HOST-SUFFIX,qdaily.com,DIRECT
 HOST-SUFFIX,qdmm.com,DIRECT
@@ -752,44 +725,19 @@ HOST-SUFFIX,qiyi.com,DIRECT
 HOST-SUFFIX,qq.com,DIRECT
 HOST-SUFFIX,qqurl.com,DIRECT
 HOST-SUFFIX,rrmj.tv,DIRECT
-HOST-SUFFIX,ruguoapp.com,DIRECT
-HOST-SUFFIX,sandai.net,DIRECT
 HOST-SUFFIX,sf-express.com,DIRECT
 HOST-SUFFIX,sinaimg.com,DIRECT
 HOST-SUFFIX,smzdm.com,DIRECT
-HOST-SUFFIX,snwx.com,DIRECT
 HOST-SUFFIX,so.com,DIRECT
 HOST-SUFFIX,sogou.com,DIRECT
 HOST-SUFFIX,sohu.com,DIRECT
 HOST-SUFFIX,sspai.com,DIRECT
-HOST-SUFFIX,startssl.com,DIRECT
-HOST-SUFFIX,store.steampowered.com,DIRECT
 HOST-SUFFIX,suning.com,DIRECT
-HOST-SUFFIX,symcd.com,DIRECT
 HOST-SUFFIX,taobao.com,DIRECT
-HOST-SUFFIX,teamviewer.com,DIRECT
-HOST-SUFFIX,tenpay.com,DIRECT
-HOST-SUFFIX,tietuku.com,DIRECT
 HOST-SUFFIX,tmall.com,DIRECT
-HOST-SUFFIX,tmzvps.com,DIRECT
-HOST-SUFFIX,trello.com,DIRECT
-HOST-SUFFIX,trellocdn.com,DIRECT
-HOST-SUFFIX,upyun.com,DIRECT
-HOST-SUFFIX,uxengine.net,DIRECT
-HOST-SUFFIX,wandoujia.com,DIRECT
 HOST-SUFFIX,weather.com,DIRECT
 HOST-SUFFIX,weibo.com,DIRECT
-HOST-SUFFIX,weiphone.com,DIRECT
-HOST-SUFFIX,windowsupdate.com,DIRECT
-HOST-SUFFIX,workflowy.com,DIRECT
-HOST-SUFFIX,xdrig.com,DIRECT
-HOST-SUFFIX,xiami.com,DIRECT
-HOST-SUFFIX,xiaojukeji.com,DIRECT
-HOST-SUFFIX,xiaomi.com,DIRECT
-HOST-SUFFIX,ximalaya.com,DIRECT
-HOST-SUFFIX,xitek.com,DIRECT
 HOST-SUFFIX,xmcdn.com,DIRECT
-HOST-SUFFIX,xslb.net,DIRECT
 HOST-SUFFIX,xunlei.com,DIREC
 HOST-SUFFIX,youdao.com,DIRECT
 HOST-SUFFIX,youku.com,DIRECT
