--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -41,6 +41,65 @@ HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
 
+//Google
+DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
+DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+DOMAIN-SUFFIX,goo.gl,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,force-remote-dns
+DOMAIN-KEYWORD,gmail,force-remote-dns
+DOMAIN-KEYWORD,google,force-remote-dns
+DOMAIN-KEYWORD,gstatic,force-remote-dns
+DOMAIN-KEYWORD,youtube,force-remote-dns
+// Microsoft
+USER-AGENT,Microsoft*,选择微软服务的Policy，不懂就选择DIRECT
+USER-AGENT,OneDrive*,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,microsoft,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,bing.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,docs.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,hotmail.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,live.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,microsoft.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,msedge.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,msn.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,office365.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onedrive.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onenote.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,outlook.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,visualstudio.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.com,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不懂就选择DIRECT
+
+//Apple
+IP-CIDR,17.0.0.0/8,选择Apple的Policy，不懂就选择DIRECT,no-resolve
+DOMAIN,appleiphonecell.com,选择Apple的Policy，不懂就选择DIRECT
+USER-AGENT,AppStore*,选择Apple的Policy，不懂就选择DIRECT
+USER-AGENT,com.apple.appstored*,选择Apple的Policy，不懂就选择DIRECT
+USER-AGENT,cloudd*,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,icloud,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-KEYWORD,itunes,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,aaplimg.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,apple.co,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,appsto.re,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,me.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,mzstatic.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
+
 HOST-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
@@ -49,27 +108,17 @@ USER-AGENT,AssistantServices*,DIRECT
 USER-AGENT,MobileAsset*,DIRECT
 USER-AGENT,Siri*,DIRECT
 USER-AGENT,*siri*,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
-HOST-SUFFIX,itunes.apple.com,DIRECT
-HOST-SUFFIX,aaplimg.com,DIRECT
-HOST-SUFFIX,itunes.com,DIRECT
-HOST-SUFFIX,me.com,DIRECT
-HOST-SUFFIX,mzstatic.com,DIRECT
 USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
 HOST,api.smoot.apple.com.cn,DIRECT
 HOST-SUFFIX,apple.com,DIRECT
 HOST,cn-smp-paymentservices.apple.com,DIRECT
 HOST,smp-device.apple.com,DIRECT
 HOST,smp-device-content.apple.com,DIRECT
-HOST,sp.itunes.apple.com,DIRECT
 HOST-SUFFIX,ess.apple.com,DIRECT
 HOST-SUFFIX,push.apple.com,DIRECT
 HOST-SUFFIX,gs-loc.apple.com,DIRECT
 HOST-SUFFIX,ls.apple.com,DIRECT
 HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
-HOST-SUFFIX,icloud.com,DIRECT
-HOST-SUFFIX,icloud-content.com,DIRECT
-USER-AGENT,cloudd*,DIRECT
 USER-AGENT,*Passbook*,DIRECT
 USER-AGENT,passd*,DIRECT
 USER-AGENT,seld*,DIRECT
@@ -93,7 +142,6 @@ IP-CIDR,149.154.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.23.127/32,PROXY
 HOST-SUFFIX,cdninstagram.com,PROXY
 HOST-SUFFIX,disquscdn.com,PROXY
-HOST-KEYWORD,google,PROXY,resolve-on-proxy
 HOST-SUFFIX,bbc.com,PROXY,resolve-on-proxy
 HOST-KEYWORD,github,PROXY,resolve-on-proxy
 HOST-KEYWORD,wikipedia,PROXY,resolve-on-proxy
@@ -106,15 +154,12 @@ HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
 HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
 HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
 HOST-SUFFIX,feedly.com,PROXY
-HOST-SUFFIX,googleapis.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,ytimg.com,PROXY,resolve-on-proxy
 HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
 HOST-KEYWORD,beetalk,PROXY,resolve-on-proxy
 HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
 HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
 HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
 HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
-HOST-SUFFIX,gmail.com,PROXY,resolve-on-proxy
 HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
 HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
 HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
