--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -35,7 +35,7 @@ HOST-SUFFIX,javlibrary.com,PROXY
 HOST-KEYWORD,v2ex.com,PROXY
 HOST-SUFFIX,tumblr.com,PROXY
 HOST-KEYWORD,rarbg,PROXY
-HOST-SUFFIX,cordcloud.me,PROXY
+HOST-SUFFIX,cordcloud.me,PROXY,force-remote-dns
 HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,flurry.com,REJECT
 DOMAIN-SUFFIX,lnk0.com,REJECT
