--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -2,8 +2,8 @@
 
 [General]
 bypass-system = true
-dns-server = 202.141.162.123,182.254.116.116,114.114.114.114,1.1.1.1
-skip-proxy = lxysh.top,127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local
+dns-server = system
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 
 [Rule]
@@ -12,15 +12,13 @@ DOMAIN-SUFFIX,lxysh.top,DIRECT
 DOMAIN-SUFFIX,duckduckgo.com,PROXY
 DOMAIN-SUFFIX,dorcelclub.com,PROXY
 DOMAIN-SUFFIX,bit.ly,PROXY
-IP-CIDR,40.100.0.0/10,PROXY
-DOMAIN-SUFFIX,live.com,PROXY
 DOMAIN-SUFFIX,yt3.ggpht.com,PROXY
 DOMAIN-KEYWORD,speedtest,PROXY
 DOMAIN-SUFFIX,sis001.com,PROXY
 DOMAIN-SUFFIX,18board.com,PROXY
 DOMAIN-SUFFIX,udn.com,PROXY
 DOMAIN-SUFFIX,javlibrary.com,PROXY
-DOMAIN-KEYWORD,v2ex.com,PROXY
+DOMAIN-SUFFIX,v2ex.com,PROXY
 DOMAIN-SUFFIX,tumblr.com,PROXY
 DOMAIN-KEYWORD,rarbg,PROXY
 DOMAIN-SUFFIX,cordcloud.me,PROXY,force-remote-dns
@@ -40,33 +38,7 @@ DOMAIN-KEYWORD,gmail,force-remote-dns
 DOMAIN-KEYWORD,google,force-remote-dns
 DOMAIN-KEYWORD,gstatic,force-remote-dns
 DOMAIN-KEYWORD,youtube,force-remote-dns
-// Microsoft
-USER-AGENT,Microsoft*,DIRECT
-USER-AGENT,OneDrive*,DIRECT
-DOMAIN-KEYWORD,microsoft,DIRECT
-DOMAIN-SUFFIX,bing.com,DIRECT
-DOMAIN-SUFFIX,bing.net,DIRECT
-DOMAIN-SUFFIX,cloudappsecurity.com,DIRECT
-DOMAIN-SUFFIX,docs.com,DIRECT
-DOMAIN-SUFFIX,hotmail.com,DIRECT
-DOMAIN-SUFFIX,live.com,DIRECT
-DOMAIN-SUFFIX,live.net,DIRECT
-DOMAIN-SUFFIX,microsoft.com,DIRECT
-DOMAIN-SUFFIX,msedge.net,DIRECT
-DOMAIN-SUFFIX,msn.com,DIRECT
-DOMAIN-SUFFIX,office.com,DIRECT
-DOMAIN-SUFFIX,office.net,DIRECT
-DOMAIN-SUFFIX,office365.com,DIRECT
-DOMAIN-SUFFIX,onedrive.com,DIRECT
-DOMAIN-SUFFIX,onenote.com,DIRECT
-DOMAIN-SUFFIX,onenote.net,DIRECT
-DOMAIN-SUFFIX,onmicrosoft.com,DIRECT
-DOMAIN-SUFFIX,outlook.com,DIRECT
-DOMAIN-SUFFIX,outlookgroups.ms,DIRECT
-DOMAIN-SUFFIX,visualstudio.com,DIRECT
-DOMAIN-SUFFIX,windows.com,DIRECT
-DOMAIN-SUFFIX,windows.net,DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,DIRECT
+
 
 //Apple
 
@@ -86,7 +58,7 @@ DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,itunes.com,DIRECT
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 DOMAIN-SUFFIX,xp.apple.com,DIRECT
 USER-AGENT,com.apple.appstored*,DIRECT
 USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
@@ -128,7 +100,7 @@ IP-CIDR,67.198.55.0/24,PROXY,no-resolve
 IP-CIDR,91.108.0.0/16,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.0.0/16,PROXY,no-resolve
-IP-CIDR,74.125.23.127/32,PROXY
+IP-CIDR,74.125.23.127/32,PROXY,no-resolve
 DOMAIN-SUFFIX,cdninstagram.com,PROXY
 DOMAIN-SUFFIX,disquscdn.com,PROXY
 DOMAIN-SUFFIX,bbc.com,PROXY,resolve-on-proxy
@@ -426,11 +398,11 @@ DOMAIN-SUFFIX,zimuzu.tv,DIRECT
 DOMAIN-SUFFIX,cn,DIRECT
 GEOIP,CN,DIRECT
 DOMAIN-SUFFIX,local,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,100.64.0.0/10,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
-IP-CIDR,172.0.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
+IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,172.0.0.0/12,DIRECT,no-resolve
+IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
 FINAL,PROXY
 
 [Host]
