--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -24,203 +24,21 @@ HOST-SUFFIX,lxysh.top,DIRECT
 HOST-SUFFIX,duckduckgo.com,PROXY
 HOST-SUFFIX,dorcelclub.com,PROXY
 HOST-SUFFIX,bit.ly,PROXY
-IP-CIDR,40.100.0.0/10,PROXY
-HOST-SUFFIX,live.com,PROXY
-HOST-SUFFIX,yt3.ggpht.com,PROXY
+HOST-SUFFIX,yt3.ggpht.com,PROXY,force-remote-dns
 HOST-KEYWORD,speedtest,PROXY
 HOST-SUFFIX,sis001.com,PROXY
 HOST-SUFFIX,18board.com,PROXY
-HOST-SUFFIX,udn.com,PROXY
-HOST-SUFFIX,javlibrary.com,PROXY
-HOST-KEYWORD,v2ex.com,PROXY
-HOST-SUFFIX,tumblr.com,PROXY
-HOST-KEYWORD,rarbg,PROXY
+HOST-SUFFIX,udn.com,PROXY,force-remote-dns
+HOST-SUFFIX,javlibrary.com,PROXY,force-remote-dns
+HOST-SUFFIX,v2ex.com,PROXY
+HOST-SUFFIX,tumblr.com,PROXY,force-remote-dns
+HOST-KEYWORD,rarbg,PROXY,force-remote-dns
 HOST-SUFFIX,cordcloud.me,PROXY,force-remote-dns
 HOST-SUFFIX,playno1.com,PROXY
 HOST-SUFFIX,flurry.com,REJECT
-DOMAIN-SUFFIX,lnk0.com,REJECT
+HOST-SUFFIX,lnk0.com,REJECT
 
-//Google
-DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
-DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
-DOMAIN-SUFFIX,goo.gl,force-remote-dns
-DOMAIN-SUFFIX,gvt1.com,force-remote-dns
-DOMAIN-SUFFIX,youtu.be,force-remote-dns
-DOMAIN-SUFFIX,ytimg.com,force-remote-dns
-DOMAIN-SUFFIX,ggpht.com,force-remote-dns
-DOMAIN-KEYWORD,gmail,force-remote-dns
-DOMAIN-KEYWORD,google,force-remote-dns
-DOMAIN-KEYWORD,gstatic,force-remote-dns
-DOMAIN-KEYWORD,youtube,force-remote-dns
-// Microsoft
-USER-AGENT,Microsoft*,选择微软服务的Policy，不懂就选择DIRECT
-USER-AGENT,OneDrive*,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-KEYWORD,microsoft,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,bing.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,cloudappsecurity.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,docs.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,hotmail.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,live.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,microsoft.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,msedge.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,msn.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,office.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,office365.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,onedrive.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,onenote.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,onmicrosoft.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlook.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,outlookgroups.ms,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,visualstudio.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.com,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,windows.net,选择微软服务的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,windowsupdate.com,选择微软服务的Policy，不懂就选择DIRECT
-
-//Apple
-
-DOMAIN,appleiphonecell.com,选择Apple的Policy，不懂就选择DIRECT
-USER-AGENT,AppStore*,选择Apple的Policy，不懂就选择DIRECT
-USER-AGENT,com.apple.appstored*,选择Apple的Policy，不懂就选择DIRECT
-USER-AGENT,cloudd*,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-KEYWORD,icloud,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-KEYWORD,itunes,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,aaplimg.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,apple.co,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,appsto.re,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,me.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,mzstatic.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,icloud-content.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes.com,选择Apple的Policy，不懂就选择DIRECT
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,选择Apple的Policy，不懂就选择DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT
-HOST-SUFFIX,xp.apple.com,DIRECT
-USER-AGENT,com.apple.appstored*,DIRECT
-USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
-USER-AGENT,*WeatherFoundation*,PROXY
-USER-AGENT,AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
-USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
-HOST,api.smoot.apple.com.cn,DIRECT
-HOST-SUFFIX,apple.com,DIRECT
-HOST,cn-smp-paymentservices.apple.com,DIRECT
-HOST,smp-device.apple.com,DIRECT
-HOST,smp-device-content.apple.com,DIRECT
-HOST-SUFFIX,ess.apple.com,DIRECT
-HOST-SUFFIX,push.apple.com,DIRECT
-HOST-SUFFIX,gs-loc.apple.com,DIRECT
-HOST-SUFFIX,ls.apple.com,DIRECT
-HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
-USER-AGENT,*Passbook*,DIRECT
-USER-AGENT,passd*,DIRECT
-USER-AGENT,seld*,DIRECT
-USER-AGENT,trustd*,DIRECT
-USER-AGENT,Wallet*,DIRECT
-USER-AGENT,com.apple.geod*,DIRECT
-USER-AGENT,com.apple.Maps,DIRECT
-USER-AGENT,FindMyFriends*,DIRECT
-USER-AGENT,FindMyiPhone*,DIRECT
-USER-AGENT,FMDClient*,DIRECT
-USER-AGENT,FMFD*,DIRECT
-USER-AGENT,fmflocatord*,DIRECT
-USER-AGENT,geod*,DIRECT
-USER-AGENT,locationd*,DIRECT
-USER-AGENT,Maps*,DIRECT
-USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
-GEOIP,US,PROXY
-GEOIP,HK,PROXY
-IP-CIDR,67.198.55.0/24,PROXY,no-resolve
-IP-CIDR,91.108.0.0/16,PROXY,no-resolve
-IP-CIDR,109.239.140.0/24,PROXY,no-resolve
-IP-CIDR,149.154.0.0/16,PROXY,no-resolve
-IP-CIDR,74.125.23.127/32,PROXY
-HOST-SUFFIX,cdninstagram.com,PROXY
-HOST-SUFFIX,disquscdn.com,PROXY
-HOST-SUFFIX,bbc.com,PROXY,resolve-on-proxy
-HOST-KEYWORD,github,PROXY,resolve-on-proxy
-HOST-KEYWORD,wikipedia,PROXY,resolve-on-proxy
-HOST-KEYWORD,amazon,PROXY,resolve-on-proxy
-HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
-HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
-HOST-KEYWORD,fbcdn,PROXY,resolve-on-proxy
-HOST-KEYWORD,facebook,PROXY,resolve-on-proxy
-HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
-HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
-HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
-HOST-SUFFIX,feedly.com,PROXY
-HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
-HOST-KEYWORD,beetalk,PROXY,resolve-on-proxy
-HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
-HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
-HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
-HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
-HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
-HOST-SUFFIX,akamai.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,autodraw.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,blogblog.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,chromeexperiments.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,creativelab5.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,crittercism.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,culturalspot.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,dartlang.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,fb.me,PROXY,resolve-on-proxy
-HOST-SUFFIX,fbcdn.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,fbsbx.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,gcr.io,PROXY,resolve-on-proxy
-HOST-SUFFIX,gosetsuden.jp,PROXY,resolve-on-proxy
-HOST-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,gwtproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,heroku.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,html5rocks.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,humblebundle.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,keyhole.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,kobo.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,kobobooks.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,madewithcode.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,material.io,PROXY,resolve-on-proxy
-HOST-SUFFIX,messenger.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,netmarble.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,nianticlabs.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,pinimg.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
-HOST-SUFFIX,pubnub.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,t.co,PROXY,resolve-on-proxy
-HOST-SUFFIX,tensorflow.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,thefacebook.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,toggleable.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,torproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
-HOST-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
-HOST-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
-HOST-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
-USER-AGENT,*Telegram*,PROXY,resolve-on-proxy
-USER-AGENT,Instagram*,PROXY,resolve-on-proxy
-USER-AGENT,*YouTube*,PROXY,resolve-on-proxy
-USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
-USER-AGENT,*Vainglory*,DIRECT
-USER-AGENT,arrowio*,DIRECT
-USER-AGENT,balls*,DIRECT
-USER-AGENT,hide*,DIRECT
-USER-AGENT,LastPass*,DIRECT
-USER-AGENT,MegaWerewolf*,DIRECT
-USER-AGENT,MicroMessenger*,DIRECT
-USER-AGENT,Microsoft*,DIRECT
-USER-AGENT,QQ*,DIRECT
-USER-AGENT,TeamViewer*,DIRECT
-USER-AGENT,TIM*,DIRECT
-USER-AGENT,WeChat*,DIRECT
+//REJECT
 HOST-SUFFIX,irs01.com,REJECT
 HOST-SUFFIX,fc-feed.cdn.bcebos.com,REJECT
 HOST-SUFFIX,zkres.myzaker.com,REJECT
@@ -327,6 +145,159 @@ HOST-KEYWORD,umtrack,REJECT
 HOST-KEYWORD,usage,REJECT
 HOST-KEYWORD,wlmonitor,REJECT
 HOST-KEYWORD,zjtoolbar,REJECT
+
+//Google
+DOMAIN-SUFFIX,fonts.googleapis.com,DIRECT
+DOMAIN-SUFFIX,fonts.gstatic.com,DIRECT
+DOMAIN-SUFFIX,goo.gl,force-remote-dns
+DOMAIN-SUFFIX,gvt1.com,force-remote-dns
+DOMAIN-SUFFIX,youtu.be,force-remote-dns
+DOMAIN-SUFFIX,ytimg.com,force-remote-dns
+DOMAIN-SUFFIX,ggpht.com,force-remote-dns
+DOMAIN-KEYWORD,gmail,force-remote-dns
+DOMAIN-KEYWORD,google,force-remote-dns
+DOMAIN-KEYWORD,gstatic,force-remote-dns
+DOMAIN-KEYWORD,youtube,force-remote-dns
+
+//Apple
+
+DOMAIN,appleiphonecell.com,DIRECT
+USER-AGENT,AppStore*,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT
+USER-AGENT,cloudd*,DIRECT
+DOMAIN-KEYWORD,icloud,DIRECT
+DOMAIN-KEYWORD,itunes,DIRECT
+DOMAIN-SUFFIX,aaplimg.com,DIRECT
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,appsto.re,DIRECT
+DOMAIN-SUFFIX,cdn-apple.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,icloud-content.com,DIRECT
+DOMAIN-SUFFIX,itunes.com,DIRECT
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT
+HOST-SUFFIX,xp.apple.com,DIRECT
+USER-AGENT,com.apple.appstored*,DIRECT
+USER-AGENT,*com.apple.mobileme.fmip1,DIRECT
+USER-AGENT,*WeatherFoundation*,PROXY
+USER-AGENT,AssistantServices*,DIRECT
+USER-AGENT,MobileAsset*,DIRECT
+USER-AGENT,Siri*,DIRECT
+USER-AGENT,*siri*,DIRECT
+USER-AGENT,%E8%AE%BE%E7%BD%AE*,DIRECT
+HOST,api.smoot.apple.com.cn,DIRECT
+HOST-SUFFIX,apple.com,DIRECT
+HOST,cn-smp-paymentservices.apple.com,DIRECT
+HOST,smp-device.apple.com,DIRECT
+HOST,smp-device-content.apple.com,DIRECT
+HOST-SUFFIX,ess.apple.com,DIRECT
+HOST-SUFFIX,push.apple.com,DIRECT
+HOST-SUFFIX,gs-loc.apple.com,DIRECT
+HOST-SUFFIX,ls.apple.com,DIRECT
+HOST-SUFFIX,push-apple.com.akadns.net,DIRECT
+USER-AGENT,*Passbook*,DIRECT
+USER-AGENT,passd*,DIRECT
+USER-AGENT,seld*,DIRECT
+USER-AGENT,trustd*,DIRECT
+USER-AGENT,Wallet*,DIRECT
+USER-AGENT,com.apple.geod*,DIRECT
+USER-AGENT,com.apple.Maps,DIRECT
+USER-AGENT,FindMyFriends*,DIRECT
+USER-AGENT,FindMyiPhone*,DIRECT
+USER-AGENT,FMDClient*,DIRECT
+USER-AGENT,FMFD*,DIRECT
+USER-AGENT,fmflocatord*,DIRECT
+USER-AGENT,geod*,DIRECT
+USER-AGENT,locationd*,DIRECT
+USER-AGENT,Maps*,DIRECT
+USER-AGENT,%E5%9C%B0%E5%9B%BE*,DIRECT
+IP-CIDR,67.198.55.0/24,PROXY,no-resolve
+IP-CIDR,91.108.0.0/16,PROXY,no-resolve
+IP-CIDR,109.239.140.0/24,PROXY,no-resolve
+IP-CIDR,149.154.0.0/16,PROXY,no-resolve
+IP-CIDR,74.125.23.127/32,PROXY,no-resolve
+HOST-SUFFIX,cdninstagram.com,PROXY
+HOST-SUFFIX,disquscdn.com,PROXY
+HOST-SUFFIX,bbc.com,PROXY,resolve-on-proxy
+HOST-KEYWORD,github,PROXY,resolve-on-proxy
+HOST-KEYWORD,wikipedia,PROXY,resolve-on-proxy
+HOST-KEYWORD,amazon,PROXY,resolve-on-proxy
+HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
+HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
+HOST-KEYWORD,fbcdn,PROXY,resolve-on-proxy
+HOST-KEYWORD,facebook,PROXY,resolve-on-proxy
+HOST-KEYWORD,instagram,PROXY,resolve-on-proxy
+HOST-KEYWORD,twitter,PROXY,resolve-on-proxy
+HOST-KEYWORD,twimg,PROXY,resolve-on-proxy
+HOST-SUFFIX,feedly.com,PROXY
+HOST-KEYWORD,appledaily,PROXY,resolve-on-proxy
+HOST-KEYWORD,beetalk,PROXY,resolve-on-proxy
+HOST-KEYWORD,blogspot,PROXY,resolve-on-proxy
+HOST-KEYWORD,dropbox,PROXY,resolve-on-proxy
+HOST-KEYWORD,telegram,PROXY,resolve-on-proxy
+HOST-KEYWORD,whatsapp,PROXY,resolve-on-proxy
+HOST-SUFFIX,1e100.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,2mdn.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,abc.xyz,PROXY,resolve-on-proxy
+HOST-SUFFIX,akamai.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,appspot.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,autodraw.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,blogblog.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,chromeexperiments.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,creativelab5.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,crittercism.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,culturalspot.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,dartlang.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,fb.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,fb.me,PROXY,resolve-on-proxy
+HOST-SUFFIX,fbcdn.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,fbsbx.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,gcr.io,PROXY,resolve-on-proxy
+HOST-SUFFIX,gosetsuden.jp,PROXY,resolve-on-proxy
+HOST-SUFFIX,gvt1.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,gwtproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,heroku.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,html5rocks.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,humblebundle.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,keyhole.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,kobo.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,kobobooks.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,madewithcode.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,material.io,PROXY,resolve-on-proxy
+HOST-SUFFIX,messenger.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,netmarble.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,nianticlabs.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,pinimg.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,pixiv.net,PROXY,resolve-on-proxy
+HOST-SUFFIX,pubnub.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,t.co,PROXY,resolve-on-proxy
+HOST-SUFFIX,tensorflow.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,thefacebook.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,toggleable.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,torproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,twitpic.com,PROXY,resolve-on-proxy
+HOST-SUFFIX,unfiltered.news,PROXY,resolve-on-proxy
+HOST-SUFFIX,waveprotocol.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,webmproject.org,PROXY,resolve-on-proxy
+HOST-SUFFIX,webrtc.org,PROXY,resolve-on-proxy
+USER-AGENT,*Telegram*,PROXY,resolve-on-proxy
+USER-AGENT,Instagram*,PROXY,resolve-on-proxy
+USER-AGENT,*YouTube*,PROXY,resolve-on-proxy
+USER-AGENT,%E5%8D%B3%E5%88%BB*,DIRECT
+USER-AGENT,*Vainglory*,DIRECT
+USER-AGENT,arrowio*,DIRECT
+USER-AGENT,balls*,DIRECT
+USER-AGENT,hide*,DIRECT
+USER-AGENT,LastPass*,DIRECT
+USER-AGENT,MegaWerewolf*,DIRECT
+USER-AGENT,MicroMessenger*,DIRECT
+USER-AGENT,Microsoft*,DIRECT
+USER-AGENT,QQ*,DIRECT
+USER-AGENT,TeamViewer*,DIRECT
+USER-AGENT,TIM*,DIRECT
+USER-AGENT,WeChat*,DIRECT
 
 HOST-SUFFIX,12306.com,DIRECT
 HOST-SUFFIX,126.net,DIRECT
@@ -436,14 +407,16 @@ HOST-SUFFIX,youku.com,DIRECT
 HOST-SUFFIX,zhihu.com,DIRECT
 HOST-SUFFIX,zimuzu.tv,DIRECT
 HOST-SUFFIX,cn,DIRECT
-GEOIP,CN,DIRECT
 HOST-SUFFIX,local,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,100.64.0.0/10,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
-IP-CIDR,172.0.0.0/12,DIRECT
-IP-CIDR,192.168.0.0/16,DIRECT
-FINAL,DIRECT
+IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,100.64.0.0/10,DIRECT,no-resolve
+IP-CIDR,127.0.0.0/8,DIRECT,no-resolve
+IP-CIDR,172.0.0.0/12,DIRECT,no-resolve
+IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
+GEOIP,CN,DIRECT
+GEOIP,US,PROXY
+GEOIP,HK,PROXY
+FINAL,PROXY
 
 [HOST-SUFFIX]
 
